--- a/LAB2/MDK-ARM/LAB2/LAB2.build_log.htm
+++ b/LAB2/MDK-ARM/LAB2/LAB2.build_log.htm
@@ -27,10 +27,15 @@ Project File Date:  02/14/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'LAB2'
-compiling stm32f4xx_hal.c...
+compiling main.c...
+../Src/main.c(79): warning:  #1295-D: Deprecated declaration blueButtonPressed - give arg types
+  int blueButtonPressed();
+../Src/main.c(147): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+  				float voltage_reading = 3.3 * filtered_val / 255.0;
+../Src/main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=5808 RO-data=440 RW-data=52 ZI-data=1140  
-"LAB2\LAB2.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=10904 RO-data=440 RW-data=76 ZI-data=1140  
+"LAB2\LAB2.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -53,7 +58,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.0.2
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
