--- a/Final_Project/FinalPrj/MDK-ARM/FinalPrj/FinalPrj.build_log.htm
+++ b/Final_Project/FinalPrj/MDK-ARM/FinalPrj/FinalPrj.build_log.htm
@@ -22,14 +22,14 @@ Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
 D:\ecse426-winter2018\Final_Project\FinalPrj\MDK-ARM\FinalPrj.uvprojx
-Project File Date:  03/27/2018
+Project File Date:  03/28/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'FinalPrj'
-compiling adc.c...
+compiling main.c...
 linking...
-Program Size: Code=11460 RO-data=448 RW-data=40 ZI-data=1384  
+Program Size: Code=9588 RO-data=448 RW-data=88 ZI-data=11392  
 "FinalPrj\FinalPrj.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -53,7 +53,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.1
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
