--- a/Final_Project/FinalPrj/MDK-ARM/FinalPrj/FinalPrj.build_log.htm
+++ b/Final_Project/FinalPrj/MDK-ARM/FinalPrj/FinalPrj.build_log.htm
@@ -27,10 +27,50 @@ Project File Date:  03/28/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'FinalPrj'
+compiling system_stm32f4xx.c...
+compiling stm32f4xx_hal_rcc_ex.c...
+compiling stm32f4xx_hal_rcc.c...
+compiling stm32f4xx_hal_dma.c...
+compiling stm32f4xx_hal_pwr.c...
+compiling stm32f4xx_hal_adc.c...
+compiling stm32f4xx_hal.c...
+compiling stm32f4xx_hal_flash_ex.c...
+compiling stm32f4xx_hal_tim_ex.c...
+compiling stm32f4xx_hal_adc_ex.c...
+compiling stm32f4xx_hal_dma_ex.c...
+compiling stm32f4xx_hal_tim.c...
+compiling stm32f4xx_hal_flash_ramfunc.c...
+compiling stm32f4xx_hal_flash.c...
+compiling stm32f4xx_hal_gpio.c...
+compiling stm32f4xx_hal_pwr_ex.c...
+compiling stm32f4xx_hal_cortex.c...
+compiling stm32f4xx_hal_uart.c...
+compiling stm32f4xx_hal_msp.c...
 compiling main.c...
+compiling stm32f4xx_hal_spi.c...
+compiling fput_debug.c...
+compiling stm32f4xx_it.c...
+compiling LIS3DSH.c...
+..\Src\LIS3DSH.c(369): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+          *out =(float)(
+IS3DSH_SENSITIVITY_2G * (float)aggregateResult);
+..\Src\LIS3DSH.c(379): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+          *out =(float)(
+IS3DSH_SENSITIVITY_4G * (float)aggregateResult);
+..\Src\LIS3DSH.c(389): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+          *out =(float)(
+IS3DSH_SENSITIVITY_6G * (float)aggregateResult);
+..\Src\LIS3DSH.c(399): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+          *out =(float)(
+IS3DSH_SENSITIVITY_8G * (float)aggregateResult);
+..\Src\LIS3DSH.c(409): warning:  #1035-D: single-precision operand implicitly converted to double-precision
+          *out =(float)(
+IS3DSH_SENSITIVITY_16G * (float)aggregateResult);
+..\Src\LIS3DSH.c: 5 warnings, 0 errors
+compiling usart.c...
 linking...
-Program Size: Code=9588 RO-data=448 RW-data=88 ZI-data=11392  
-"FinalPrj\FinalPrj.axf" - 0 Error(s), 0 Warning(s).
+Program Size: Code=9584 RO-data=448 RW-data=88 ZI-data=11392  
+"FinalPrj\FinalPrj.axf" - 0 Error(s), 5 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -53,7 +93,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.1
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:01:02
 </pre>
 </body>
 </html>
